[package]
name = "ground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.3.1"
radio = { path = "../radio" }
common = { path = "../common" }
serde = "1.0.157"
async-mutex = "1.4.0"