[package]
name = "launch"
version = "0.1.0"
edition = "2021"
authors = ["Jack Hogan"]
description = "Purdue Orbital launch station management and control program"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.7", features = ["derive"] }
ds323x = "0.5.1"
log = "0.4.20"
mpu9250-i2c = "0.6.8"
rppal = { version = "0.15.0", features = ["hal"] }
serialport = "4.2.2"
ublox = "0.4.4"
