[package]
name = "launch"
version = "0.1.0"
edition = "2021"
authors = ["Jack Hogan"]
description = "Purdue Orbital launch station management and control program"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.7", features = ["derive"] }
ds323x = "0.5.1"
flexi_logger = "0.27.3"
log = "0.4.20"
# mpu9250-i2c = "0.6.8"
multi_log = "0.1.2"
rppal = { version = "0.15.0", features = ["hal"] }
serialport = "4.2.2"
signal-hook = "0.3.17"
ublox = "0.4.4"
common = { path = "../common" }
radio = { path = "../radio" }
rolly = { git = "https://github.com/ImTheSquid/rolly.git", features = ["i2c", "i2c_ad0"]}
