[package]
name = "radio"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-complex = "0.4"
anyhow = "1.0.69"
bytes = "1.5.0"
lazy_static = "1.4.0"
rustdsp = { git = "https://github.com/purdue-orbital/RustDSP.git", version = "0.1.0" }
bitvec = "1.0.1"
flume = "0.11"
num = "0.4.1"

[dev-dependencies]
rand = "0.8.5"
criterion = "0.5.1"

[[bench]]
name = "bench"
harness = false

[features]
mfsk = []
fsk = []
ask = []
bpsk = []
qpsk = []

[build-dependencies]
cc = "1.0.83"
xshell = "0.2.5"
